--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Book & Author Hub</title>
-  <script type="module" crossorigin src="/Final-Project-WDD330-Book-Author-Hub/assets/main-D4Rx9kPf.js"></script>
-  <link rel="stylesheet" crossorigin href="/Final-Project-WDD330-Book-Author-Hub/assets/main-D3IsX5wy.css">
+  <script type="module" crossorigin src="/Final-Project-WDD330-Book-Author-Hub/assets/main-4i0lS03I.js"></script>
+  <link rel="stylesheet" crossorigin href="/Final-Project-WDD330-Book-Author-Hub/assets/main-CSRoQqlZ.css">
 </head>
 <body>
-  <header>
-    <h1>Book & Author Hub</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Search</a>
-      <a href="#">About</a>
-    </nav>
-  </header>
+  
+    <header>
+      <h1>📚 Book & Author Hub</h1>
+      <nav id="nav-menu" class="nav-menu">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+      </nav>
+      <button id="menu-toggle" aria-label="Toggle menu">☰</button>
+    </header>
+
 
   <main id="app">
     <section id="search-view">
