new  views added and funtionality

--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,16 @@
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-  <header>
-    <h1>Book & Author Hub</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Search</a>
-      <a href="#">About</a>
-    </nav>
-  </header>
+  
+    <header>
+      <h1>📚 Book & Author Hub</h1>
+      <nav id="nav-menu" class="nav-menu">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+      </nav>
+      <button id="menu-toggle" aria-label="Toggle menu">☰</button>
+    </header>
+
 
   <main id="app">
     <section id="search-view">
