--- a/src/favorites.html
+++ b/src/favorites.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Favorites | Book & Author Hub</title>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
-  <body>
-    <header>
-      <h1>📚 Book & Author Hub</h1>
-      <nav id="nav">
-        <a href="index.html">Home</a>
-        <a href="favorites.html">Favorites</a>
-        <a href="about.html">About</a>
-      </nav>
-      <button id="menu-toggle" aria-label="Menu">☰</button>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Favorites | Book & Author Hub</title>
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
+<body>
+  <header>
+    <h1>📚 Book & Author Hub</h1>
+    <button id="menu-toggle" aria-label="Toggle menu">☰</button>
+    <nav id="nav-menu" class="nav-menu">
+      <a href="index.html">Home</a>
+      <a href="favorites.html">Favorites</a>
+      <a href="about.html">About</a>
+    </nav>
+  </header>
 
-    <main>
-      <h2>Your Favorite Books</h2>
-      <div id="favorites-list"></div>
-      <button id="download-txt">⬇️ Download TXT</button>
-      <button id="download-json">⬇️ Download JSON</button>
-    </main>
+  <main>
+    <section>
+      <h2>My Favorite Books</h2>
+      <p class="small-muted">
+        Below you’ll find your saved books. You can copy them to the clipboard or download the list.
+      </p>
+      <div id="favorites-list" class="results-grid"></div>
+      <div style="margin-top:1rem; text-align:center;">
+        <button id="download-txt">📄 Download as TXT</button>
+        <button id="download-json">💾 Download as JSON</button>
+      </div>
 
-    <script type="module" src="./js/favoritesView.js"></script>
-  </body>
+      
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Book & Author Hub - WDD 330</p>
+  </footer>
+
+  <script type="module" src="./js/favoritesView.js"></script>
+  <script type="module" src="./js/navToggle.js"></script>
+
+</body>
 </html>
