--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,13 @@
   
     <header>
       <h1>📚 Book & Author Hub</h1>
-      <nav id="nav-menu" class="nav-menu">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-      </nav>
       <button id="menu-toggle" aria-label="Toggle menu">☰</button>
+      <nav id="nav-menu" class="nav-menu">
+        <a href="index.html">Home</a>
+        <a href="favorites.html">Favorites</a>
+        <a href="about.html">About</a>
+      </nav>
+      
     </header>
 
 
