--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Book & Author Hub</title>
-  <script type="module" crossorigin src="/Final-Project-WDD330-Book-Author-Hub/assets/main-4i0lS03I.js"></script>
-  <link rel="stylesheet" crossorigin href="/Final-Project-WDD330-Book-Author-Hub/assets/main-CSRoQqlZ.css">
+  <script type="module" crossorigin src="/Final-Project-WDD330-Book-Author-Hub/assets/main-DtiOuupz.js"></script>
+  <link rel="stylesheet" crossorigin href="/Final-Project-WDD330-Book-Author-Hub/assets/main-XUwhvJpe.css">
 </head>
 <body>
   
     <header>
       <h1>📚 Book & Author Hub</h1>
-      <nav id="nav-menu" class="nav-menu">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-      </nav>
       <button id="menu-toggle" aria-label="Toggle menu">☰</button>
+      <nav id="nav-menu" class="nav-menu">
+        <a href="index.html">Home</a>
+        <a href="favorites.html">Favorites</a>
+        <a href="about.html">About</a>
+      </nav>
+      
     </header>
 
 
