Improve Card Presentation and stabilize Favorites ISBN lookup
Also cleans up Favorites view rendering using dedicated CSS classes.

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -23,7 +23,7 @@
       <p class="small-muted">
         Below you’ll find your saved books. You can copy them to the clipboard or download the list.
       </p>
-      <div id="favorites-list" class="results-grid"></div>
+      <div id="favorites-list" class="favorites-container"></div>
       <div style="margin-top:1rem; text-align:center;">
         <button id="download-txt">📄 Download as TXT</button>
         <button id="download-json">💾 Download as JSON</button>
