--- a/favorites.html
+++ b/favorites.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Favorites | Book & Author Hub</title>
-  <script type="module" crossorigin src="/Final-Project-WDD330-Book-Author-Hub/assets/favorites-CP1---Gu.js"></script>
-  <link rel="modulepreload" crossorigin href="/Final-Project-WDD330-Book-Author-Hub/assets/style-BHd3r0Ca.js">
+  <script type="module" crossorigin src="/Final-Project-WDD330-Book-Author-Hub/assets/favorites-DoxYSHrL.js"></script>
+  <link rel="modulepreload" crossorigin href="/Final-Project-WDD330-Book-Author-Hub/assets/style-gLCKlo5M.js">
   <link rel="modulepreload" crossorigin href="/Final-Project-WDD330-Book-Author-Hub/assets/navToggle-BDjXESUz.js">
-  <link rel="stylesheet" crossorigin href="/Final-Project-WDD330-Book-Author-Hub/assets/style-C4RBiwpy.css">
+  <link rel="stylesheet" crossorigin href="/Final-Project-WDD330-Book-Author-Hub/assets/style-BbhJFpW1.css">
 </head>
 <body>
   <header>
@@ -26,7 +26,7 @@
       <p class="small-muted">
         Below you’ll find your saved books. You can copy them to the clipboard or download the list.
       </p>
-      <div id="favorites-list" class="results-grid"></div>
+      <div id="favorites-list" class="favorites-container"></div>
       <div style="margin-top:1rem; text-align:center;">
         <button id="download-txt">📄 Download as TXT</button>
         <button id="download-json">💾 Download as JSON</button>
